# studia-l476-disco-idd-fw

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  README.md  debug.launch  debug.openocd
cmake/: ccache.cmake  cppcheck.cmake  cubemx.cmake  include_what_you_use.cmake
cmake/Platform/: ARM-GNU-C-Cortex-M0+.cmake  ARM-GNU-C.cmake  ARM.cmake
cmake/Toolchain/: arm-none-eabi-gcc.cmake
doc/: meas_ranges.ods
scripts/: gnuplot.sh  plotstdin.py  readdevtty.sh
src/: kamillibc
src/app/: main.c  meas.c  meas.h  prif.h
src/app/machine/: hal_dmafiforx.c  hal_dmafiforx.h  mx.h
src/app/sys/: rtc.c  unistd_ex.c  unistd_io.c
src/app/uni/: _types.h  adc.c  adc.h  system_types.h  uni.c
stm32cubemx/: .gitignore  STM32L152CCTx_FLASH.ld  iddfw.ioc
stm32cubemx/Inc/: dma.h  iwdg.h  main.h  stm32l1xx_hal_conf.h  tim.h  usart.h
stm32cubemx/Src/: adc.c  comp.c  tim.c  usart.c
stm32cubemx/iddfw/: .gitignore  Makefile  STM32L152CCTx_FLASH.ld  iddfw.ioc
stm32cubemx/iddfw/Inc/: comp.h  main.h  stm32l1xx_it.h  tim.h
stm32cubemx/iddfw/Src/: adc.c  dma.c  gpio.c  i2c.c  iwdg.c  main.c  stm32l1xx_it.c  tim.c  usart.c
